// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`to-contain <ReactElement> fails when the actual does not match the expected 1`] = `
"expected
<div>
  <ul>
    <li><span class=\\"user\\" id=\\"user-1\\">User1</span></li>
    <li>
      <span class=\\"user\\" id=\\"user-2\\">User2</span>
      <span class=\\"user\\" id=\\"user-3\\">User3</span>
    </li>
  </ul>
</div>
to contain <User id={4} />

the best match was
<Fixture // should be <User
   // missing id={4}
/>"
`;

exports[`to-contain <ReactElement> when negated fails when the actual does match the expected 1`] = `
"expected
<div>
  <ul>
    <li><span class=\\"user\\" id=\\"user-1\\">User1</span></li>
    <li>
      <span class=\\"user\\" id=\\"user-2\\">User2</span>
      <span class=\\"user\\" id=\\"user-3\\">User3</span>
    </li>
  </ul>
</div>
not to contain <User id={2} />

but found the following match
<Fixture // should be <User
   // missing id={2}
/>"
`;

exports[`to-contain <selector> fails when the actual does not match the expected 1`] = `
"expected
<div>
  <ul>
    <li><span class=\\"user\\" id=\\"user-1\\">User1</span></li>
    <li>
      <span class=\\"user\\" id=\\"user-2\\">User2</span>
      <span class=\\"user\\" id=\\"user-3\\">User3</span>
    </li>
  </ul>
</div>
to contain '#user-4'"
`;
